# fork_text_to_sql

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  LICENSE  MAINTAINERS  README.md  example.env  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
docs/examples/: example_cohort_generator.py  example_qa_system.py
src/ascent_ai/config/: __init__.py  settings.py
src/ascent_ai/data/processing/: encoder.py  io_aws.py  sql_post_processor.py  utils_processing.py
src/ascent_ai/data/queries/: query_library.py  querylib_loader.py  result_query_builder.py
src/ascent_ai/db/: snowflake_session.py
src/ascent_ai/models/inference/: assistants.py  criteria_to_counts.py  filter_questions.py  prompts.py  qa.py  rag.py  rwd_request.py  sql_explainer.py  sql_verify.py  table_one.py
src/ascent_ai/schemas/: constants.py  data_definitions.py
src/ascent_ai/utils/: __init__.py  conversions.py  mixing_temp.py
