[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ascent-ai"
version = "0.2.0"
description = "Ascent AI Data Science Package"
authors = [
    {name = "Angelo Ziletti", email = "angelo.ziletti@bayer.com"},
]
requires-python = ">=3.11"
dynamic = ["dependencies"]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[project.urls]
"Homepage" = "https://github.com/MetzSe/fork_text_to_sql"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ascent_ai*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
